// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for: false 1`] = `
":host {
  display: block;
  overflow-x: clip !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot:not([name])::slotted(.-p-canvas-grid), slot[name="footer"]::slotted(.-p-canvas-grid) {
  display: grid !important;
  grid-template-columns: repeat(12,minmax(0,1fr)) !important;
  column-gap: clamp(16px, 1.25vw + 12px, 24px) !important;
  margin-inline: auto !important;
  container-type: inline-size !important;
}
slot[name="sidebar-end-header"] {
  display: block;
}
slot[name="background"] {
  z-index: 1;
  display: block;
  grid-area: 1/2/-1/3;
  position: sticky;
  top: 0;
  height: 100lvh;
  pointer-events: none;
  overflow: hidden;
  transform: translate3d(0,0,0);
}
slot[name="background"]::slotted(video), slot[name="background"]::slotted(img) {
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
slot[name="title"]::slotted(a) {
  all: unset !important;
  cursor: pointer !important;
  color: inherit !important;
  border-radius: var(--p-radius-sm) !important;
}
slot[name="title"]::slotted(a:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
h2 {
  all: unset;
  padding: 4px;
  font: var(--p-font-weight-normal) var(--p-typescale-xs)/var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  text-transform: uppercase;
  letter-spacing: 2px;
}
@media(forced-colors:active) {
  slot[name="title"]::slotted(a:focus-visible) {
    outline-color: Highlight !important;
  }
}

.root {
  display: grid;
  grid-template: auto minmax(0,1fr) auto/min(100vw,var(--p-canvas-sidebar-start-width,320px)) 100vw min(100vw,var(--p-canvas-sidebar-end-width,320px));
  grid-template-areas: "sidebar-start header sidebar-end" "sidebar-start main sidebar-end" "sidebar-start footer sidebar-end";
  min-height: 100lvh;
}
.root::before {
  content: "";
  z-index: 0;
  grid-area: 1/2/-1/3;
  background: var(--p-color-canvas);
  pointer-events: none;
  border-end-start-radius: 0;
  transition: border-radius var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.header {
  z-index: 4;
  grid-area: header;
  container-type: inline-size;
  position: sticky;
  top: 0;
  min-height: 56px;
  box-sizing: border-box;
  display: grid;
  grid-template-columns: minmax(0,1fr) auto minmax(0,1fr);
  gap: clamp(16px, 1.25vw + 12px, 24px);
  align-items: center;
  padding: var(--p-spacing-static-sm) clamp(16px, 1.25vw + 12px, 24px);
}
.header:focus-visible {
  outline: none;
}
.header__area {
  display: flex;
  gap: var(--p-spacing-static-sm);
  align-items: center;
}
.header__area--start {
  justify-content: flex-start;
}
.header__area--end {
  justify-content: flex-end;
}
.header__wordmark {
  height: 10px;
}
.blur {
  z-index: -1;
  position: absolute;
  inset: 0;
  pointer-events: none;
}
.blur > div {
  position: absolute;
  inset: 0;
}
.blur > div:nth-of-type(1) {
  -webkit-backdrop-filter: blur(64px);
  backdrop-filter: blur(64px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,100%) 0%,rgba(0,0,0,1) 12.5%,rgba(0,0,0,1) 25%,rgba(0,0,0,0) 37.5%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,100%) 0%,rgba(0,0,0,1) 12.5%,rgba(0,0,0,1) 25%,rgba(0,0,0,0) 37.5%);
}
.blur > div:nth-of-type(2) {
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 12.5%,rgba(0,0,0,1) 25%,rgba(0,0,0,1) 37.5%,rgba(0,0,0,0) 50%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 12.5%,rgba(0,0,0,1) 25%,rgba(0,0,0,1) 37.5%,rgba(0,0,0,0) 50%);
}
.blur > div:nth-of-type(3) {
  -webkit-backdrop-filter: blur(16px);
  backdrop-filter: blur(16px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 25%,rgba(0,0,0,1) 37.5%,rgba(0,0,0,1) 50%,rgba(0,0,0,0) 62.5%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 25%,rgba(0,0,0,1) 37.5%,rgba(0,0,0,1) 50%,rgba(0,0,0,0) 62.5%);
}
.blur > div:nth-of-type(4) {
  -webkit-backdrop-filter: blur(8px);
  backdrop-filter: blur(8px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 37.5%,rgba(0,0,0,1) 50%,rgba(0,0,0,1) 62.5%,rgba(0,0,0,0) 75%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 37.5%,rgba(0,0,0,1) 50%,rgba(0,0,0,1) 62.5%,rgba(0,0,0,0) 75%);
}
.blur > div:nth-of-type(5) {
  -webkit-backdrop-filter: blur(4px);
  backdrop-filter: blur(4px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 50%,rgba(0,0,0,1) 62.5%,rgba(0,0,0,1) 75%,rgba(0,0,0,0) 87.5%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 50%,rgba(0,0,0,1) 62.5%,rgba(0,0,0,1) 75%,rgba(0,0,0,0) 87.5%);
}
.blur > div:nth-of-type(6) {
  -webkit-backdrop-filter: blur(2px);
  backdrop-filter: blur(2px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 62.5%,rgba(0,0,0,1) 75%,rgba(0,0,0,1) 87.5%,rgba(0,0,0,0) 100%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 62.5%,rgba(0,0,0,1) 75%,rgba(0,0,0,1) 87.5%,rgba(0,0,0,0) 100%);
}
.blur > div:nth-of-type(7) {
  -webkit-backdrop-filter: blur(1px);
  backdrop-filter: blur(1px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 75%,rgba(0,0,0,1) 87.5%,rgba(0,0,0,1) 100%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 75%,rgba(0,0,0,1) 87.5%,rgba(0,0,0,1) 100%);
}
.blur > div:nth-of-type(8) {
  -webkit-backdrop-filter: blur(.5px);
  backdrop-filter: blur(.5px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 87.5%,rgba(0,0,0,1) 100%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 87.5%,rgba(0,0,0,1) 100%);
}
.blur::after {
  content: "";
  position: absolute;
  top: 0;
  inset-inline-start: 0;
  width: var(--p-radius-3xl);
  height: calc(2 * var(--p-radius-3xl));
  border-start-start-radius: 0;
  box-shadow: 0 calc(-1 * var(--p-radius-3xl)) 0 0 var(--p-color-surface);
  transition: border-radius var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.main {
  z-index: 2;
  grid-area: main;
  padding: clamp(16px, 1.25vw + 12px, 24px);
}
.footer {
  z-index: 5;
  grid-area: footer;
  padding: clamp(16px, 1.25vw + 12px, 24px) clamp(16px, 1.25vw + 12px, 24px) var(--p-spacing-fluid-sm);
  position: sticky;
  bottom: 0;
}
.footer::before {
  content: "";
  z-index: -1;
  position: absolute;
  inset: -140px 0 0;
  pointer-events: none;
  background: linear-gradient(to bottom,hsl(from var(--p-color-canvas) h s l / 0) 0%,hsl(from var(--p-color-canvas) h s l / 0.013) 8.1%,hsl(from var(--p-color-canvas) h s l / 0.049) 15.5%,hsl(from var(--p-color-canvas) h s l / 0.104) 22.5%,hsl(from var(--p-color-canvas) h s l / 0.175) 29%,hsl(from var(--p-color-canvas) h s l / 0.259) 35.3%,hsl(from var(--p-color-canvas) h s l / 0.352) 41.2%,hsl(from var(--p-color-canvas) h s l / 0.45) 47.1%,hsl(from var(--p-color-canvas) h s l / 0.55) 52.9%,hsl(from var(--p-color-canvas) h s l / 0.648) 58.8%,hsl(from var(--p-color-canvas) h s l / 0.741) 64.7%,hsl(from var(--p-color-canvas) h s l / 0.825) 71%,hsl(from var(--p-color-canvas) h s l / 0.896) 77.5%,hsl(from var(--p-color-canvas) h s l / 0.951) 84.5%,hsl(from var(--p-color-canvas) h s l / 0.987) 91.9%,var(--p-color-canvas) 100%);
  border-end-start-radius: 0;
  transition: border-radius var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.sidebar {
  z-index: 3;
  position: sticky;
  top: 0;
  height: 100dvh;
  padding: clamp(16px, 1.25vw + 12px, 24px);
  box-sizing: border-box;
  overflow: hidden auto;
  overscroll-behavior-y: contain;
}
.sidebar:focus-visible {
  outline: none;
}
.sidebar--start {
  grid-area: sidebar-start;
  justify-self: flex-end;
  background: var(--p-color-surface);
  width: min(100vw,var(--p-canvas-sidebar-start-width,320px));
}
.sidebar--end {
  grid-area: sidebar-end;
  justify-self: flex-start;
  border-inline-start: 1px solid var(--p-color-contrast-lower);
  background: var(--p-color-canvas);
  width: min(100vw,var(--p-canvas-sidebar-end-width,320px));
}
.sidebar__header {
  z-index: 9999999;
  display: flex;
  gap: var(--p-spacing-static-sm);
  align-items: center;
  position: sticky;
  top: calc(-1 * clamp(16px, 1.25vw + 12px, 24px));
  margin: calc(-1 * clamp(16px, 1.25vw + 12px, 24px)) calc(-1 * clamp(16px, 1.25vw + 12px, 24px)) clamp(16px, 1.25vw + 12px, 24px);
  padding: var(--p-spacing-static-sm) clamp(16px, 1.25vw + 12px, 24px);
  min-height: 56px;
  box-sizing: border-box;
}
.sidebar__header--start {
  justify-content: flex-start;
}
.sidebar__header--start::before {
  background: linear-gradient(180deg,var(--p-color-surface) 0%,var(--p-color-surface) 65%,transparent 100%);
}
.sidebar__header--end {
  justify-content: space-between;
}
.sidebar__header--end::before {
  background: linear-gradient(180deg,var(--p-color-canvas) 0%,var(--p-color-canvas) 65%,transparent 100%);
}
.sidebar__header::before {
  content: "";
  z-index: -1;
  position: absolute;
  inset: 0 0 -8px;
  pointer-events: none;
}
@media(min-width:1000px) {
  .root {
    transition: grid-template-columns var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
    grid-template-columns: 0px minmax(320px,1fr) 0px;
  }
  .sidebar--start {
    width: min(calc(100vw - 320px),var(--p-canvas-sidebar-start-width,320px));
  }
  .sidebar--end {
    width: min(calc(100vw - 320px),var(--p-canvas-sidebar-end-width,320px));
  }
}

@media(max-width:999px) {
  .root {
    transition: transform var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
    transform: translate3d(calc(-1 * min(100vw,var(--p-canvas-sidebar-start-width,320px))),0,0);
  }
  .root:dir(rtl) {
    transform: translate3d(min(100vw,var(--p-canvas-sidebar-end-width,320px)),0,0);
  }
}

@container(min-width:760px) {
  .header__crest {
    display: none;
  }
}

@container(max-width:759px) {
  .header__wordmark {
    display: none;
  }
}"
`;

exports[`getComponentCss() > should return correct css for: false 2`] = `
":host {
  display: block;
  overflow-x: clip !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot:not([name])::slotted(.-p-canvas-grid), slot[name="footer"]::slotted(.-p-canvas-grid) {
  display: grid !important;
  grid-template-columns: repeat(12,minmax(0,1fr)) !important;
  column-gap: clamp(16px, 1.25vw + 12px, 24px) !important;
  margin-inline: auto !important;
  container-type: inline-size !important;
}
slot[name="sidebar-end-header"] {
  display: block;
}
slot[name="background"] {
  z-index: 1;
  display: block;
  grid-area: 1/2/-1/3;
  position: sticky;
  top: 0;
  height: 100lvh;
  pointer-events: none;
  overflow: hidden;
  transform: translate3d(0,0,0);
}
slot[name="background"]::slotted(video), slot[name="background"]::slotted(img) {
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
slot[name="title"]::slotted(a) {
  all: unset !important;
  cursor: pointer !important;
  color: inherit !important;
  border-radius: var(--p-radius-sm) !important;
}
slot[name="title"]::slotted(a:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
h2 {
  all: unset;
  padding: 4px;
  font: var(--p-font-weight-normal) var(--p-typescale-xs)/var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  text-transform: uppercase;
  letter-spacing: 2px;
}
@media(forced-colors:active) {
  slot[name="title"]::slotted(a:focus-visible) {
    outline-color: Highlight !important;
  }
}

.root {
  display: grid;
  grid-template: auto minmax(0,1fr) auto/min(100vw,var(--p-canvas-sidebar-start-width,320px)) 100vw min(100vw,var(--p-canvas-sidebar-end-width,320px));
  grid-template-areas: "sidebar-start header sidebar-end" "sidebar-start main sidebar-end" "sidebar-start footer sidebar-end";
  min-height: 100lvh;
}
.root::before {
  content: "";
  z-index: 0;
  grid-area: 1/2/-1/3;
  background: var(--p-color-canvas);
  pointer-events: none;
  border-end-start-radius: 0;
  transition: border-radius var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.header {
  z-index: 4;
  grid-area: header;
  container-type: inline-size;
  position: sticky;
  top: 0;
  min-height: 56px;
  box-sizing: border-box;
  display: grid;
  grid-template-columns: minmax(0,1fr) auto minmax(0,1fr);
  gap: clamp(16px, 1.25vw + 12px, 24px);
  align-items: center;
  padding: var(--p-spacing-static-sm) clamp(16px, 1.25vw + 12px, 24px);
}
.header:focus-visible {
  outline: none;
}
.header__area {
  display: flex;
  gap: var(--p-spacing-static-sm);
  align-items: center;
}
.header__area--start {
  justify-content: flex-start;
}
.header__area--end {
  justify-content: flex-end;
}
.header__wordmark {
  height: 10px;
}
.blur {
  z-index: -1;
  position: absolute;
  inset: 0;
  pointer-events: none;
}
.blur > div {
  position: absolute;
  inset: 0;
}
.blur > div:nth-of-type(1) {
  -webkit-backdrop-filter: blur(64px);
  backdrop-filter: blur(64px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,100%) 0%,rgba(0,0,0,1) 12.5%,rgba(0,0,0,1) 25%,rgba(0,0,0,0) 37.5%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,100%) 0%,rgba(0,0,0,1) 12.5%,rgba(0,0,0,1) 25%,rgba(0,0,0,0) 37.5%);
}
.blur > div:nth-of-type(2) {
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 12.5%,rgba(0,0,0,1) 25%,rgba(0,0,0,1) 37.5%,rgba(0,0,0,0) 50%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 12.5%,rgba(0,0,0,1) 25%,rgba(0,0,0,1) 37.5%,rgba(0,0,0,0) 50%);
}
.blur > div:nth-of-type(3) {
  -webkit-backdrop-filter: blur(16px);
  backdrop-filter: blur(16px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 25%,rgba(0,0,0,1) 37.5%,rgba(0,0,0,1) 50%,rgba(0,0,0,0) 62.5%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 25%,rgba(0,0,0,1) 37.5%,rgba(0,0,0,1) 50%,rgba(0,0,0,0) 62.5%);
}
.blur > div:nth-of-type(4) {
  -webkit-backdrop-filter: blur(8px);
  backdrop-filter: blur(8px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 37.5%,rgba(0,0,0,1) 50%,rgba(0,0,0,1) 62.5%,rgba(0,0,0,0) 75%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 37.5%,rgba(0,0,0,1) 50%,rgba(0,0,0,1) 62.5%,rgba(0,0,0,0) 75%);
}
.blur > div:nth-of-type(5) {
  -webkit-backdrop-filter: blur(4px);
  backdrop-filter: blur(4px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 50%,rgba(0,0,0,1) 62.5%,rgba(0,0,0,1) 75%,rgba(0,0,0,0) 87.5%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 50%,rgba(0,0,0,1) 62.5%,rgba(0,0,0,1) 75%,rgba(0,0,0,0) 87.5%);
}
.blur > div:nth-of-type(6) {
  -webkit-backdrop-filter: blur(2px);
  backdrop-filter: blur(2px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 62.5%,rgba(0,0,0,1) 75%,rgba(0,0,0,1) 87.5%,rgba(0,0,0,0) 100%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 62.5%,rgba(0,0,0,1) 75%,rgba(0,0,0,1) 87.5%,rgba(0,0,0,0) 100%);
}
.blur > div:nth-of-type(7) {
  -webkit-backdrop-filter: blur(1px);
  backdrop-filter: blur(1px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 75%,rgba(0,0,0,1) 87.5%,rgba(0,0,0,1) 100%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 75%,rgba(0,0,0,1) 87.5%,rgba(0,0,0,1) 100%);
}
.blur > div:nth-of-type(8) {
  -webkit-backdrop-filter: blur(.5px);
  backdrop-filter: blur(.5px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 87.5%,rgba(0,0,0,1) 100%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 87.5%,rgba(0,0,0,1) 100%);
}
.blur::after {
  content: "";
  position: absolute;
  top: 0;
  inset-inline-start: 0;
  width: var(--p-radius-3xl);
  height: calc(2 * var(--p-radius-3xl));
  border-start-start-radius: 0;
  box-shadow: 0 calc(-1 * var(--p-radius-3xl)) 0 0 var(--p-color-surface);
  transition: border-radius var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.main {
  z-index: 2;
  grid-area: main;
  padding: clamp(16px, 1.25vw + 12px, 24px);
}
.footer {
  z-index: 5;
  grid-area: footer;
  padding: clamp(16px, 1.25vw + 12px, 24px) clamp(16px, 1.25vw + 12px, 24px) var(--p-spacing-fluid-sm);
  position: sticky;
  bottom: 0;
}
.footer::before {
  content: "";
  z-index: -1;
  position: absolute;
  inset: -140px 0 0;
  pointer-events: none;
  background: linear-gradient(to bottom,hsl(from var(--p-color-canvas) h s l / 0) 0%,hsl(from var(--p-color-canvas) h s l / 0.013) 8.1%,hsl(from var(--p-color-canvas) h s l / 0.049) 15.5%,hsl(from var(--p-color-canvas) h s l / 0.104) 22.5%,hsl(from var(--p-color-canvas) h s l / 0.175) 29%,hsl(from var(--p-color-canvas) h s l / 0.259) 35.3%,hsl(from var(--p-color-canvas) h s l / 0.352) 41.2%,hsl(from var(--p-color-canvas) h s l / 0.45) 47.1%,hsl(from var(--p-color-canvas) h s l / 0.55) 52.9%,hsl(from var(--p-color-canvas) h s l / 0.648) 58.8%,hsl(from var(--p-color-canvas) h s l / 0.741) 64.7%,hsl(from var(--p-color-canvas) h s l / 0.825) 71%,hsl(from var(--p-color-canvas) h s l / 0.896) 77.5%,hsl(from var(--p-color-canvas) h s l / 0.951) 84.5%,hsl(from var(--p-color-canvas) h s l / 0.987) 91.9%,var(--p-color-canvas) 100%);
  border-end-start-radius: 0;
  transition: border-radius var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.sidebar {
  z-index: 3;
  position: sticky;
  top: 0;
  height: 100dvh;
  padding: clamp(16px, 1.25vw + 12px, 24px);
  box-sizing: border-box;
  overflow: hidden auto;
  overscroll-behavior-y: contain;
}
.sidebar:focus-visible {
  outline: none;
}
.sidebar--start {
  grid-area: sidebar-start;
  justify-self: flex-end;
  background: var(--p-color-surface);
  width: min(100vw,var(--p-canvas-sidebar-start-width,320px));
}
.sidebar--end {
  grid-area: sidebar-end;
  justify-self: flex-start;
  border-inline-start: 1px solid var(--p-color-contrast-lower);
  background: var(--p-color-canvas);
  width: min(100vw,var(--p-canvas-sidebar-end-width,320px));
}
.sidebar__header {
  z-index: 9999999;
  display: flex;
  gap: var(--p-spacing-static-sm);
  align-items: center;
  position: sticky;
  top: calc(-1 * clamp(16px, 1.25vw + 12px, 24px));
  margin: calc(-1 * clamp(16px, 1.25vw + 12px, 24px)) calc(-1 * clamp(16px, 1.25vw + 12px, 24px)) clamp(16px, 1.25vw + 12px, 24px);
  padding: var(--p-spacing-static-sm) clamp(16px, 1.25vw + 12px, 24px);
  min-height: 56px;
  box-sizing: border-box;
}
.sidebar__header--start {
  justify-content: flex-start;
}
.sidebar__header--start::before {
  background: linear-gradient(180deg,var(--p-color-surface) 0%,var(--p-color-surface) 65%,transparent 100%);
}
.sidebar__header--end {
  justify-content: space-between;
}
.sidebar__header--end::before {
  background: linear-gradient(180deg,var(--p-color-canvas) 0%,var(--p-color-canvas) 65%,transparent 100%);
}
.sidebar__header::before {
  content: "";
  z-index: -1;
  position: absolute;
  inset: 0 0 -8px;
  pointer-events: none;
}
@media(min-width:1000px) {
  .root {
    transition: grid-template-columns var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
    grid-template-columns: 0px minmax(320px,1fr) min(calc(100vw - 320px),var(--p-canvas-sidebar-end-width,320px));
  }
  .sidebar--start {
    width: min(calc(100vw - 320px),var(--p-canvas-sidebar-start-width,320px));
  }
  .sidebar--end {
    width: min(calc(100vw - 320px),var(--p-canvas-sidebar-end-width,320px));
  }
}

@media(max-width:999px) {
  .root {
    transition: transform var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
    transform: translate3d(calc(-1 * min(100vw,var(--p-canvas-sidebar-start-width,320px)) - min(100vw,var(--p-canvas-sidebar-end-width,320px))),0,0);
  }
  .root:dir(rtl) {
    transform: translate3d(calc(min(100vw,var(--p-canvas-sidebar-start-width,320px)) + min(100vw,var(--p-canvas-sidebar-end-width,320px))),0,0);
  }
}

@container(min-width:760px) {
  .header__crest {
    display: none;
  }
}

@container(max-width:759px) {
  .header__wordmark {
    display: none;
  }
}"
`;

exports[`getComponentCss() > should return correct css for: false 3`] = `
":host {
  display: block;
  overflow-x: clip !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot:not([name])::slotted(.-p-canvas-grid), slot[name="footer"]::slotted(.-p-canvas-grid) {
  display: grid !important;
  grid-template-columns: repeat(12,minmax(0,1fr)) !important;
  column-gap: clamp(16px, 1.25vw + 12px, 24px) !important;
  margin-inline: auto !important;
  container-type: inline-size !important;
}
slot[name="sidebar-end-header"] {
  display: block;
}
slot[name="background"] {
  z-index: 1;
  display: block;
  grid-area: 1/2/-1/3;
  position: sticky;
  top: 0;
  height: 100lvh;
  pointer-events: none;
  overflow: hidden;
  transform: translate3d(0,0,0);
}
slot[name="background"]::slotted(video), slot[name="background"]::slotted(img) {
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
slot[name="title"]::slotted(a) {
  all: unset !important;
  cursor: pointer !important;
  color: inherit !important;
  border-radius: var(--p-radius-sm) !important;
}
slot[name="title"]::slotted(a:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
h2 {
  all: unset;
  padding: 4px;
  font: var(--p-font-weight-normal) var(--p-typescale-xs)/var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  text-transform: uppercase;
  letter-spacing: 2px;
}
@media(forced-colors:active) {
  slot[name="title"]::slotted(a:focus-visible) {
    outline-color: Highlight !important;
  }
}

.root {
  display: grid;
  grid-template: auto minmax(0,1fr) auto/min(100vw,var(--p-canvas-sidebar-start-width,320px)) 100vw min(100vw,var(--p-canvas-sidebar-end-width,320px));
  grid-template-areas: "sidebar-start header sidebar-end" "sidebar-start main sidebar-end" "sidebar-start footer sidebar-end";
  min-height: 100lvh;
}
.root::before {
  content: "";
  z-index: 0;
  grid-area: 1/2/-1/3;
  background: var(--p-color-surface);
  pointer-events: none;
  border-end-start-radius: 0;
  transition: border-radius var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.header {
  z-index: 4;
  grid-area: header;
  container-type: inline-size;
  position: sticky;
  top: 0;
  min-height: 56px;
  box-sizing: border-box;
  display: grid;
  grid-template-columns: minmax(0,1fr) auto minmax(0,1fr);
  gap: clamp(16px, 1.25vw + 12px, 24px);
  align-items: center;
  padding: var(--p-spacing-static-sm) clamp(16px, 1.25vw + 12px, 24px);
}
.header:focus-visible {
  outline: none;
}
.header__area {
  display: flex;
  gap: var(--p-spacing-static-sm);
  align-items: center;
}
.header__area--start {
  justify-content: flex-start;
}
.header__area--end {
  justify-content: flex-end;
}
.header__wordmark {
  height: 10px;
}
.blur {
  z-index: -1;
  position: absolute;
  inset: 0;
  pointer-events: none;
}
.blur > div {
  position: absolute;
  inset: 0;
}
.blur > div:nth-of-type(1) {
  -webkit-backdrop-filter: blur(64px);
  backdrop-filter: blur(64px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,100%) 0%,rgba(0,0,0,1) 12.5%,rgba(0,0,0,1) 25%,rgba(0,0,0,0) 37.5%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,100%) 0%,rgba(0,0,0,1) 12.5%,rgba(0,0,0,1) 25%,rgba(0,0,0,0) 37.5%);
}
.blur > div:nth-of-type(2) {
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 12.5%,rgba(0,0,0,1) 25%,rgba(0,0,0,1) 37.5%,rgba(0,0,0,0) 50%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 12.5%,rgba(0,0,0,1) 25%,rgba(0,0,0,1) 37.5%,rgba(0,0,0,0) 50%);
}
.blur > div:nth-of-type(3) {
  -webkit-backdrop-filter: blur(16px);
  backdrop-filter: blur(16px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 25%,rgba(0,0,0,1) 37.5%,rgba(0,0,0,1) 50%,rgba(0,0,0,0) 62.5%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 25%,rgba(0,0,0,1) 37.5%,rgba(0,0,0,1) 50%,rgba(0,0,0,0) 62.5%);
}
.blur > div:nth-of-type(4) {
  -webkit-backdrop-filter: blur(8px);
  backdrop-filter: blur(8px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 37.5%,rgba(0,0,0,1) 50%,rgba(0,0,0,1) 62.5%,rgba(0,0,0,0) 75%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 37.5%,rgba(0,0,0,1) 50%,rgba(0,0,0,1) 62.5%,rgba(0,0,0,0) 75%);
}
.blur > div:nth-of-type(5) {
  -webkit-backdrop-filter: blur(4px);
  backdrop-filter: blur(4px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 50%,rgba(0,0,0,1) 62.5%,rgba(0,0,0,1) 75%,rgba(0,0,0,0) 87.5%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 50%,rgba(0,0,0,1) 62.5%,rgba(0,0,0,1) 75%,rgba(0,0,0,0) 87.5%);
}
.blur > div:nth-of-type(6) {
  -webkit-backdrop-filter: blur(2px);
  backdrop-filter: blur(2px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 62.5%,rgba(0,0,0,1) 75%,rgba(0,0,0,1) 87.5%,rgba(0,0,0,0) 100%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 62.5%,rgba(0,0,0,1) 75%,rgba(0,0,0,1) 87.5%,rgba(0,0,0,0) 100%);
}
.blur > div:nth-of-type(7) {
  -webkit-backdrop-filter: blur(1px);
  backdrop-filter: blur(1px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 75%,rgba(0,0,0,1) 87.5%,rgba(0,0,0,1) 100%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 75%,rgba(0,0,0,1) 87.5%,rgba(0,0,0,1) 100%);
}
.blur > div:nth-of-type(8) {
  -webkit-backdrop-filter: blur(.5px);
  backdrop-filter: blur(.5px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 87.5%,rgba(0,0,0,1) 100%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 87.5%,rgba(0,0,0,1) 100%);
}
.blur::after {
  content: "";
  position: absolute;
  top: 0;
  inset-inline-start: 0;
  width: var(--p-radius-3xl);
  height: calc(2 * var(--p-radius-3xl));
  border-start-start-radius: 0;
  box-shadow: 0 calc(-1 * var(--p-radius-3xl)) 0 0 var(--p-color-canvas);
  transition: border-radius var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.main {
  z-index: 2;
  grid-area: main;
  padding: clamp(16px, 1.25vw + 12px, 24px);
}
.footer {
  z-index: 5;
  grid-area: footer;
  padding: clamp(16px, 1.25vw + 12px, 24px) clamp(16px, 1.25vw + 12px, 24px) var(--p-spacing-fluid-sm);
  position: sticky;
  bottom: 0;
}
.footer::before {
  content: "";
  z-index: -1;
  position: absolute;
  inset: -140px 0 0;
  pointer-events: none;
  background: linear-gradient(to bottom,hsl(from var(--p-color-surface) h s l / 0) 0%,hsl(from var(--p-color-surface) h s l / 0.013) 8.1%,hsl(from var(--p-color-surface) h s l / 0.049) 15.5%,hsl(from var(--p-color-surface) h s l / 0.104) 22.5%,hsl(from var(--p-color-surface) h s l / 0.175) 29%,hsl(from var(--p-color-surface) h s l / 0.259) 35.3%,hsl(from var(--p-color-surface) h s l / 0.352) 41.2%,hsl(from var(--p-color-surface) h s l / 0.45) 47.1%,hsl(from var(--p-color-surface) h s l / 0.55) 52.9%,hsl(from var(--p-color-surface) h s l / 0.648) 58.8%,hsl(from var(--p-color-surface) h s l / 0.741) 64.7%,hsl(from var(--p-color-surface) h s l / 0.825) 71%,hsl(from var(--p-color-surface) h s l / 0.896) 77.5%,hsl(from var(--p-color-surface) h s l / 0.951) 84.5%,hsl(from var(--p-color-surface) h s l / 0.987) 91.9%,var(--p-color-surface) 100%);
  border-end-start-radius: 0;
  transition: border-radius var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.sidebar {
  z-index: 3;
  position: sticky;
  top: 0;
  height: 100dvh;
  padding: clamp(16px, 1.25vw + 12px, 24px);
  box-sizing: border-box;
  overflow: hidden auto;
  overscroll-behavior-y: contain;
}
.sidebar:focus-visible {
  outline: none;
}
.sidebar--start {
  grid-area: sidebar-start;
  justify-self: flex-end;
  background: var(--p-color-canvas);
  width: min(100vw,var(--p-canvas-sidebar-start-width,320px));
}
.sidebar--end {
  grid-area: sidebar-end;
  justify-self: flex-start;
  border-inline-start: 1px solid var(--p-color-contrast-lower);
  background: var(--p-color-surface);
  width: min(100vw,var(--p-canvas-sidebar-end-width,320px));
}
.sidebar__header {
  z-index: 9999999;
  display: flex;
  gap: var(--p-spacing-static-sm);
  align-items: center;
  position: sticky;
  top: calc(-1 * clamp(16px, 1.25vw + 12px, 24px));
  margin: calc(-1 * clamp(16px, 1.25vw + 12px, 24px)) calc(-1 * clamp(16px, 1.25vw + 12px, 24px)) clamp(16px, 1.25vw + 12px, 24px);
  padding: var(--p-spacing-static-sm) clamp(16px, 1.25vw + 12px, 24px);
  min-height: 56px;
  box-sizing: border-box;
}
.sidebar__header--start {
  justify-content: flex-start;
}
.sidebar__header--start::before {
  background: linear-gradient(180deg,var(--p-color-canvas) 0%,var(--p-color-canvas) 65%,transparent 100%);
}
.sidebar__header--end {
  justify-content: space-between;
}
.sidebar__header--end::before {
  background: linear-gradient(180deg,var(--p-color-surface) 0%,var(--p-color-surface) 65%,transparent 100%);
}
.sidebar__header::before {
  content: "";
  z-index: -1;
  position: absolute;
  inset: 0 0 -8px;
  pointer-events: none;
}
@media(min-width:1000px) {
  .root {
    transition: grid-template-columns var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
    grid-template-columns: 0px minmax(320px,1fr) 0px;
  }
  .sidebar--start {
    width: min(calc(100vw - 320px),var(--p-canvas-sidebar-start-width,320px));
  }
  .sidebar--end {
    width: min(calc(100vw - 320px),var(--p-canvas-sidebar-end-width,320px));
  }
}

@media(max-width:999px) {
  .root {
    transition: transform var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
    transform: translate3d(calc(-1 * min(100vw,var(--p-canvas-sidebar-start-width,320px))),0,0);
  }
  .root:dir(rtl) {
    transform: translate3d(min(100vw,var(--p-canvas-sidebar-end-width,320px)),0,0);
  }
}

@container(min-width:760px) {
  .header__crest {
    display: none;
  }
}

@container(max-width:759px) {
  .header__wordmark {
    display: none;
  }
}"
`;

exports[`getComponentCss() > should return correct css for: true 1`] = `
":host {
  display: block;
  overflow-x: clip !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot:not([name])::slotted(.-p-canvas-grid), slot[name="footer"]::slotted(.-p-canvas-grid) {
  display: grid !important;
  grid-template-columns: repeat(12,minmax(0,1fr)) !important;
  column-gap: clamp(16px, 1.25vw + 12px, 24px) !important;
  margin-inline: auto !important;
  container-type: inline-size !important;
}
slot[name="sidebar-end-header"] {
  display: block;
}
slot[name="background"] {
  z-index: 1;
  display: block;
  grid-area: 1/2/-1/3;
  position: sticky;
  top: 0;
  height: 100lvh;
  pointer-events: none;
  overflow: hidden;
  transform: translate3d(0,0,0);
}
slot[name="background"]::slotted(video), slot[name="background"]::slotted(img) {
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
slot[name="title"]::slotted(a) {
  all: unset !important;
  cursor: pointer !important;
  color: inherit !important;
  border-radius: var(--p-radius-sm) !important;
}
slot[name="title"]::slotted(a:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
h2 {
  all: unset;
  padding: 4px;
  font: var(--p-font-weight-normal) var(--p-typescale-xs)/var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  text-transform: uppercase;
  letter-spacing: 2px;
}
@media(forced-colors:active) {
  slot[name="title"]::slotted(a:focus-visible) {
    outline-color: Highlight !important;
  }
}

.root {
  display: grid;
  grid-template: auto minmax(0,1fr) auto/min(100vw,var(--p-canvas-sidebar-start-width,320px)) 100vw min(100vw,var(--p-canvas-sidebar-end-width,320px));
  grid-template-areas: "sidebar-start header sidebar-end" "sidebar-start main sidebar-end" "sidebar-start footer sidebar-end";
  min-height: 100lvh;
}
.root::before {
  content: "";
  z-index: 0;
  grid-area: 1/2/-1/3;
  background: var(--p-color-canvas);
  pointer-events: none;
  border-end-start-radius: var(--p-radius-3xl);
  transition: border-radius var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.header {
  z-index: 4;
  grid-area: header;
  container-type: inline-size;
  position: sticky;
  top: 0;
  min-height: 56px;
  box-sizing: border-box;
  display: grid;
  grid-template-columns: minmax(0,1fr) auto minmax(0,1fr);
  gap: clamp(16px, 1.25vw + 12px, 24px);
  align-items: center;
  padding: var(--p-spacing-static-sm) clamp(16px, 1.25vw + 12px, 24px);
}
.header:focus-visible {
  outline: none;
}
.header__area {
  display: flex;
  gap: var(--p-spacing-static-sm);
  align-items: center;
}
.header__area--start {
  justify-content: flex-start;
}
.header__area--end {
  justify-content: flex-end;
}
.header__wordmark {
  height: 10px;
}
.blur {
  z-index: -1;
  position: absolute;
  inset: 0;
  pointer-events: none;
}
.blur > div {
  position: absolute;
  inset: 0;
}
.blur > div:nth-of-type(1) {
  -webkit-backdrop-filter: blur(64px);
  backdrop-filter: blur(64px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,100%) 0%,rgba(0,0,0,1) 12.5%,rgba(0,0,0,1) 25%,rgba(0,0,0,0) 37.5%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,100%) 0%,rgba(0,0,0,1) 12.5%,rgba(0,0,0,1) 25%,rgba(0,0,0,0) 37.5%);
}
.blur > div:nth-of-type(2) {
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 12.5%,rgba(0,0,0,1) 25%,rgba(0,0,0,1) 37.5%,rgba(0,0,0,0) 50%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 12.5%,rgba(0,0,0,1) 25%,rgba(0,0,0,1) 37.5%,rgba(0,0,0,0) 50%);
}
.blur > div:nth-of-type(3) {
  -webkit-backdrop-filter: blur(16px);
  backdrop-filter: blur(16px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 25%,rgba(0,0,0,1) 37.5%,rgba(0,0,0,1) 50%,rgba(0,0,0,0) 62.5%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 25%,rgba(0,0,0,1) 37.5%,rgba(0,0,0,1) 50%,rgba(0,0,0,0) 62.5%);
}
.blur > div:nth-of-type(4) {
  -webkit-backdrop-filter: blur(8px);
  backdrop-filter: blur(8px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 37.5%,rgba(0,0,0,1) 50%,rgba(0,0,0,1) 62.5%,rgba(0,0,0,0) 75%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 37.5%,rgba(0,0,0,1) 50%,rgba(0,0,0,1) 62.5%,rgba(0,0,0,0) 75%);
}
.blur > div:nth-of-type(5) {
  -webkit-backdrop-filter: blur(4px);
  backdrop-filter: blur(4px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 50%,rgba(0,0,0,1) 62.5%,rgba(0,0,0,1) 75%,rgba(0,0,0,0) 87.5%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 50%,rgba(0,0,0,1) 62.5%,rgba(0,0,0,1) 75%,rgba(0,0,0,0) 87.5%);
}
.blur > div:nth-of-type(6) {
  -webkit-backdrop-filter: blur(2px);
  backdrop-filter: blur(2px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 62.5%,rgba(0,0,0,1) 75%,rgba(0,0,0,1) 87.5%,rgba(0,0,0,0) 100%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 62.5%,rgba(0,0,0,1) 75%,rgba(0,0,0,1) 87.5%,rgba(0,0,0,0) 100%);
}
.blur > div:nth-of-type(7) {
  -webkit-backdrop-filter: blur(1px);
  backdrop-filter: blur(1px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 75%,rgba(0,0,0,1) 87.5%,rgba(0,0,0,1) 100%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 75%,rgba(0,0,0,1) 87.5%,rgba(0,0,0,1) 100%);
}
.blur > div:nth-of-type(8) {
  -webkit-backdrop-filter: blur(.5px);
  backdrop-filter: blur(.5px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 87.5%,rgba(0,0,0,1) 100%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 87.5%,rgba(0,0,0,1) 100%);
}
.blur::after {
  content: "";
  position: absolute;
  top: 0;
  inset-inline-start: 0;
  width: var(--p-radius-3xl);
  height: calc(2 * var(--p-radius-3xl));
  border-start-start-radius: var(--p-radius-3xl);
  box-shadow: 0 calc(-1 * var(--p-radius-3xl)) 0 0 var(--p-color-surface);
  transition: border-radius var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.main {
  z-index: 2;
  grid-area: main;
  padding: clamp(16px, 1.25vw + 12px, 24px);
}
.footer {
  z-index: 5;
  grid-area: footer;
  padding: clamp(16px, 1.25vw + 12px, 24px) clamp(16px, 1.25vw + 12px, 24px) var(--p-spacing-fluid-sm);
  position: sticky;
  bottom: 0;
}
.footer::before {
  content: "";
  z-index: -1;
  position: absolute;
  inset: -140px 0 0;
  pointer-events: none;
  background: linear-gradient(to bottom,hsl(from var(--p-color-canvas) h s l / 0) 0%,hsl(from var(--p-color-canvas) h s l / 0.013) 8.1%,hsl(from var(--p-color-canvas) h s l / 0.049) 15.5%,hsl(from var(--p-color-canvas) h s l / 0.104) 22.5%,hsl(from var(--p-color-canvas) h s l / 0.175) 29%,hsl(from var(--p-color-canvas) h s l / 0.259) 35.3%,hsl(from var(--p-color-canvas) h s l / 0.352) 41.2%,hsl(from var(--p-color-canvas) h s l / 0.45) 47.1%,hsl(from var(--p-color-canvas) h s l / 0.55) 52.9%,hsl(from var(--p-color-canvas) h s l / 0.648) 58.8%,hsl(from var(--p-color-canvas) h s l / 0.741) 64.7%,hsl(from var(--p-color-canvas) h s l / 0.825) 71%,hsl(from var(--p-color-canvas) h s l / 0.896) 77.5%,hsl(from var(--p-color-canvas) h s l / 0.951) 84.5%,hsl(from var(--p-color-canvas) h s l / 0.987) 91.9%,var(--p-color-canvas) 100%);
  border-end-start-radius: var(--p-radius-3xl);
  transition: border-radius var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.sidebar {
  z-index: 3;
  position: sticky;
  top: 0;
  height: 100dvh;
  padding: clamp(16px, 1.25vw + 12px, 24px);
  box-sizing: border-box;
  overflow: hidden auto;
  overscroll-behavior-y: contain;
}
.sidebar:focus-visible {
  outline: none;
}
.sidebar--start {
  grid-area: sidebar-start;
  justify-self: flex-end;
  background: var(--p-color-surface);
  width: min(100vw,var(--p-canvas-sidebar-start-width,320px));
}
.sidebar--end {
  grid-area: sidebar-end;
  justify-self: flex-start;
  border-inline-start: 1px solid var(--p-color-contrast-lower);
  background: var(--p-color-canvas);
  width: min(100vw,var(--p-canvas-sidebar-end-width,320px));
}
.sidebar__header {
  z-index: 9999999;
  display: flex;
  gap: var(--p-spacing-static-sm);
  align-items: center;
  position: sticky;
  top: calc(-1 * clamp(16px, 1.25vw + 12px, 24px));
  margin: calc(-1 * clamp(16px, 1.25vw + 12px, 24px)) calc(-1 * clamp(16px, 1.25vw + 12px, 24px)) clamp(16px, 1.25vw + 12px, 24px);
  padding: var(--p-spacing-static-sm) clamp(16px, 1.25vw + 12px, 24px);
  min-height: 56px;
  box-sizing: border-box;
}
.sidebar__header--start {
  justify-content: flex-start;
}
.sidebar__header--start::before {
  background: linear-gradient(180deg,var(--p-color-surface) 0%,var(--p-color-surface) 65%,transparent 100%);
}
.sidebar__header--end {
  justify-content: space-between;
}
.sidebar__header--end::before {
  background: linear-gradient(180deg,var(--p-color-canvas) 0%,var(--p-color-canvas) 65%,transparent 100%);
}
.sidebar__header::before {
  content: "";
  z-index: -1;
  position: absolute;
  inset: 0 0 -8px;
  pointer-events: none;
}
@media(min-width:1000px) {
  .root {
    transition: grid-template-columns var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
    grid-template-columns: min(calc(100vw - 320px),var(--p-canvas-sidebar-start-width,320px)) minmax(320px,1fr) 0px;
  }
  .sidebar--start {
    width: min(calc(100vw - 320px),var(--p-canvas-sidebar-start-width,320px));
  }
  .sidebar--end {
    width: min(calc(100vw - 320px),var(--p-canvas-sidebar-end-width,320px));
  }
}

@media(max-width:999px) {
  .root {
    transition: transform var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
    transform: translate3d(0,0,0);
  }
  .root:dir(rtl) {
    transform: translate3d(0,0,0);
  }
}

@container(min-width:760px) {
  .header__crest {
    display: none;
  }
}

@container(max-width:759px) {
  .header__wordmark {
    display: none;
  }
}"
`;

exports[`getComponentCss() > should return correct css for: true 2`] = `
":host {
  display: block;
  overflow-x: clip !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot:not([name])::slotted(.-p-canvas-grid), slot[name="footer"]::slotted(.-p-canvas-grid) {
  display: grid !important;
  grid-template-columns: repeat(12,minmax(0,1fr)) !important;
  column-gap: clamp(16px, 1.25vw + 12px, 24px) !important;
  margin-inline: auto !important;
  container-type: inline-size !important;
}
slot[name="sidebar-end-header"] {
  display: block;
}
slot[name="background"] {
  z-index: 1;
  display: block;
  grid-area: 1/2/-1/3;
  position: sticky;
  top: 0;
  height: 100lvh;
  pointer-events: none;
  overflow: hidden;
  transform: translate3d(0,0,0);
}
slot[name="background"]::slotted(video), slot[name="background"]::slotted(img) {
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
slot[name="title"]::slotted(a) {
  all: unset !important;
  cursor: pointer !important;
  color: inherit !important;
  border-radius: var(--p-radius-sm) !important;
}
slot[name="title"]::slotted(a:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
h2 {
  all: unset;
  padding: 4px;
  font: var(--p-font-weight-normal) var(--p-typescale-xs)/var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  text-transform: uppercase;
  letter-spacing: 2px;
}
@media(forced-colors:active) {
  slot[name="title"]::slotted(a:focus-visible) {
    outline-color: Highlight !important;
  }
}

.root {
  display: grid;
  grid-template: auto minmax(0,1fr) auto/min(100vw,var(--p-canvas-sidebar-start-width,320px)) 100vw min(100vw,var(--p-canvas-sidebar-end-width,320px));
  grid-template-areas: "sidebar-start header sidebar-end" "sidebar-start main sidebar-end" "sidebar-start footer sidebar-end";
  min-height: 100lvh;
}
.root::before {
  content: "";
  z-index: 0;
  grid-area: 1/2/-1/3;
  background: var(--p-color-canvas);
  pointer-events: none;
  border-end-start-radius: var(--p-radius-3xl);
  transition: border-radius var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.header {
  z-index: 4;
  grid-area: header;
  container-type: inline-size;
  position: sticky;
  top: 0;
  min-height: 56px;
  box-sizing: border-box;
  display: grid;
  grid-template-columns: minmax(0,1fr) auto minmax(0,1fr);
  gap: clamp(16px, 1.25vw + 12px, 24px);
  align-items: center;
  padding: var(--p-spacing-static-sm) clamp(16px, 1.25vw + 12px, 24px);
}
.header:focus-visible {
  outline: none;
}
.header__area {
  display: flex;
  gap: var(--p-spacing-static-sm);
  align-items: center;
}
.header__area--start {
  justify-content: flex-start;
}
.header__area--end {
  justify-content: flex-end;
}
.header__wordmark {
  height: 10px;
}
.blur {
  z-index: -1;
  position: absolute;
  inset: 0;
  pointer-events: none;
}
.blur > div {
  position: absolute;
  inset: 0;
}
.blur > div:nth-of-type(1) {
  -webkit-backdrop-filter: blur(64px);
  backdrop-filter: blur(64px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,100%) 0%,rgba(0,0,0,1) 12.5%,rgba(0,0,0,1) 25%,rgba(0,0,0,0) 37.5%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,100%) 0%,rgba(0,0,0,1) 12.5%,rgba(0,0,0,1) 25%,rgba(0,0,0,0) 37.5%);
}
.blur > div:nth-of-type(2) {
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 12.5%,rgba(0,0,0,1) 25%,rgba(0,0,0,1) 37.5%,rgba(0,0,0,0) 50%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 12.5%,rgba(0,0,0,1) 25%,rgba(0,0,0,1) 37.5%,rgba(0,0,0,0) 50%);
}
.blur > div:nth-of-type(3) {
  -webkit-backdrop-filter: blur(16px);
  backdrop-filter: blur(16px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 25%,rgba(0,0,0,1) 37.5%,rgba(0,0,0,1) 50%,rgba(0,0,0,0) 62.5%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 25%,rgba(0,0,0,1) 37.5%,rgba(0,0,0,1) 50%,rgba(0,0,0,0) 62.5%);
}
.blur > div:nth-of-type(4) {
  -webkit-backdrop-filter: blur(8px);
  backdrop-filter: blur(8px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 37.5%,rgba(0,0,0,1) 50%,rgba(0,0,0,1) 62.5%,rgba(0,0,0,0) 75%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 37.5%,rgba(0,0,0,1) 50%,rgba(0,0,0,1) 62.5%,rgba(0,0,0,0) 75%);
}
.blur > div:nth-of-type(5) {
  -webkit-backdrop-filter: blur(4px);
  backdrop-filter: blur(4px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 50%,rgba(0,0,0,1) 62.5%,rgba(0,0,0,1) 75%,rgba(0,0,0,0) 87.5%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 50%,rgba(0,0,0,1) 62.5%,rgba(0,0,0,1) 75%,rgba(0,0,0,0) 87.5%);
}
.blur > div:nth-of-type(6) {
  -webkit-backdrop-filter: blur(2px);
  backdrop-filter: blur(2px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 62.5%,rgba(0,0,0,1) 75%,rgba(0,0,0,1) 87.5%,rgba(0,0,0,0) 100%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 62.5%,rgba(0,0,0,1) 75%,rgba(0,0,0,1) 87.5%,rgba(0,0,0,0) 100%);
}
.blur > div:nth-of-type(7) {
  -webkit-backdrop-filter: blur(1px);
  backdrop-filter: blur(1px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 75%,rgba(0,0,0,1) 87.5%,rgba(0,0,0,1) 100%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 75%,rgba(0,0,0,1) 87.5%,rgba(0,0,0,1) 100%);
}
.blur > div:nth-of-type(8) {
  -webkit-backdrop-filter: blur(.5px);
  backdrop-filter: blur(.5px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 87.5%,rgba(0,0,0,1) 100%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 87.5%,rgba(0,0,0,1) 100%);
}
.blur::after {
  content: "";
  position: absolute;
  top: 0;
  inset-inline-start: 0;
  width: var(--p-radius-3xl);
  height: calc(2 * var(--p-radius-3xl));
  border-start-start-radius: var(--p-radius-3xl);
  box-shadow: 0 calc(-1 * var(--p-radius-3xl)) 0 0 var(--p-color-surface);
  transition: border-radius var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.main {
  z-index: 2;
  grid-area: main;
  padding: clamp(16px, 1.25vw + 12px, 24px);
}
.footer {
  z-index: 5;
  grid-area: footer;
  padding: clamp(16px, 1.25vw + 12px, 24px) clamp(16px, 1.25vw + 12px, 24px) var(--p-spacing-fluid-sm);
  position: sticky;
  bottom: 0;
}
.footer::before {
  content: "";
  z-index: -1;
  position: absolute;
  inset: -140px 0 0;
  pointer-events: none;
  background: linear-gradient(to bottom,hsl(from var(--p-color-canvas) h s l / 0) 0%,hsl(from var(--p-color-canvas) h s l / 0.013) 8.1%,hsl(from var(--p-color-canvas) h s l / 0.049) 15.5%,hsl(from var(--p-color-canvas) h s l / 0.104) 22.5%,hsl(from var(--p-color-canvas) h s l / 0.175) 29%,hsl(from var(--p-color-canvas) h s l / 0.259) 35.3%,hsl(from var(--p-color-canvas) h s l / 0.352) 41.2%,hsl(from var(--p-color-canvas) h s l / 0.45) 47.1%,hsl(from var(--p-color-canvas) h s l / 0.55) 52.9%,hsl(from var(--p-color-canvas) h s l / 0.648) 58.8%,hsl(from var(--p-color-canvas) h s l / 0.741) 64.7%,hsl(from var(--p-color-canvas) h s l / 0.825) 71%,hsl(from var(--p-color-canvas) h s l / 0.896) 77.5%,hsl(from var(--p-color-canvas) h s l / 0.951) 84.5%,hsl(from var(--p-color-canvas) h s l / 0.987) 91.9%,var(--p-color-canvas) 100%);
  border-end-start-radius: var(--p-radius-3xl);
  transition: border-radius var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.sidebar {
  z-index: 3;
  position: sticky;
  top: 0;
  height: 100dvh;
  padding: clamp(16px, 1.25vw + 12px, 24px);
  box-sizing: border-box;
  overflow: hidden auto;
  overscroll-behavior-y: contain;
}
.sidebar:focus-visible {
  outline: none;
}
.sidebar--start {
  grid-area: sidebar-start;
  justify-self: flex-end;
  background: var(--p-color-surface);
  width: min(100vw,var(--p-canvas-sidebar-start-width,320px));
}
.sidebar--end {
  grid-area: sidebar-end;
  justify-self: flex-start;
  border-inline-start: 1px solid var(--p-color-contrast-lower);
  background: var(--p-color-canvas);
  width: min(100vw,var(--p-canvas-sidebar-end-width,320px));
}
.sidebar__header {
  z-index: 9999999;
  display: flex;
  gap: var(--p-spacing-static-sm);
  align-items: center;
  position: sticky;
  top: calc(-1 * clamp(16px, 1.25vw + 12px, 24px));
  margin: calc(-1 * clamp(16px, 1.25vw + 12px, 24px)) calc(-1 * clamp(16px, 1.25vw + 12px, 24px)) clamp(16px, 1.25vw + 12px, 24px);
  padding: var(--p-spacing-static-sm) clamp(16px, 1.25vw + 12px, 24px);
  min-height: 56px;
  box-sizing: border-box;
}
.sidebar__header--start {
  justify-content: flex-start;
}
.sidebar__header--start::before {
  background: linear-gradient(180deg,var(--p-color-surface) 0%,var(--p-color-surface) 65%,transparent 100%);
}
.sidebar__header--end {
  justify-content: space-between;
}
.sidebar__header--end::before {
  background: linear-gradient(180deg,var(--p-color-canvas) 0%,var(--p-color-canvas) 65%,transparent 100%);
}
.sidebar__header::before {
  content: "";
  z-index: -1;
  position: absolute;
  inset: 0 0 -8px;
  pointer-events: none;
}
@media(min-width:1000px) {
  .root {
    transition: grid-template-columns var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
    grid-template-columns: min(calc(100vw - 320px),var(--p-canvas-sidebar-start-width,320px)) minmax(320px,1fr) min(calc(100vw - 320px),var(--p-canvas-sidebar-end-width,320px));
  }
  .sidebar--start {
    width: min(calc(100vw - 320px),var(--p-canvas-sidebar-start-width,320px));
  }
  .sidebar--end {
    width: min(calc(100vw - 320px),var(--p-canvas-sidebar-end-width,320px));
  }
}

@media(max-width:999px) {
  .root {
    transition: transform var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
    transform: translate3d(calc(-1 * min(100vw,var(--p-canvas-sidebar-start-width,320px)) - min(100vw,var(--p-canvas-sidebar-end-width,320px))),0,0);
  }
  .root:dir(rtl) {
    transform: translate3d(calc(min(100vw,var(--p-canvas-sidebar-start-width,320px)) + min(100vw,var(--p-canvas-sidebar-end-width,320px))),0,0);
  }
}

@container(min-width:760px) {
  .header__crest {
    display: none;
  }
}

@container(max-width:759px) {
  .header__wordmark {
    display: none;
  }
}"
`;

exports[`getComponentCss() > should return correct css for: true 3`] = `
":host {
  display: block;
  overflow-x: clip !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot:not([name])::slotted(.-p-canvas-grid), slot[name="footer"]::slotted(.-p-canvas-grid) {
  display: grid !important;
  grid-template-columns: repeat(12,minmax(0,1fr)) !important;
  column-gap: clamp(16px, 1.25vw + 12px, 24px) !important;
  margin-inline: auto !important;
  container-type: inline-size !important;
}
slot[name="sidebar-end-header"] {
  display: block;
}
slot[name="background"] {
  z-index: 1;
  display: block;
  grid-area: 1/2/-1/3;
  position: sticky;
  top: 0;
  height: 100lvh;
  pointer-events: none;
  overflow: hidden;
  transform: translate3d(0,0,0);
}
slot[name="background"]::slotted(video), slot[name="background"]::slotted(img) {
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
slot[name="title"]::slotted(a) {
  all: unset !important;
  cursor: pointer !important;
  color: inherit !important;
  border-radius: var(--p-radius-sm) !important;
}
slot[name="title"]::slotted(a:focus-visible) {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
h2 {
  all: unset;
  padding: 4px;
  font: var(--p-font-weight-normal) var(--p-typescale-xs)/var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  text-transform: uppercase;
  letter-spacing: 2px;
}
@media(forced-colors:active) {
  slot[name="title"]::slotted(a:focus-visible) {
    outline-color: Highlight !important;
  }
}

.root {
  display: grid;
  grid-template: auto minmax(0,1fr) auto/min(100vw,var(--p-canvas-sidebar-start-width,320px)) 100vw min(100vw,var(--p-canvas-sidebar-end-width,320px));
  grid-template-areas: "sidebar-start header sidebar-end" "sidebar-start main sidebar-end" "sidebar-start footer sidebar-end";
  min-height: 100lvh;
}
.root::before {
  content: "";
  z-index: 0;
  grid-area: 1/2/-1/3;
  background: var(--p-color-surface);
  pointer-events: none;
  border-end-start-radius: var(--p-radius-3xl);
  transition: border-radius var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.header {
  z-index: 4;
  grid-area: header;
  container-type: inline-size;
  position: sticky;
  top: 0;
  min-height: 56px;
  box-sizing: border-box;
  display: grid;
  grid-template-columns: minmax(0,1fr) auto minmax(0,1fr);
  gap: clamp(16px, 1.25vw + 12px, 24px);
  align-items: center;
  padding: var(--p-spacing-static-sm) clamp(16px, 1.25vw + 12px, 24px);
}
.header:focus-visible {
  outline: none;
}
.header__area {
  display: flex;
  gap: var(--p-spacing-static-sm);
  align-items: center;
}
.header__area--start {
  justify-content: flex-start;
}
.header__area--end {
  justify-content: flex-end;
}
.header__wordmark {
  height: 10px;
}
.blur {
  z-index: -1;
  position: absolute;
  inset: 0;
  pointer-events: none;
}
.blur > div {
  position: absolute;
  inset: 0;
}
.blur > div:nth-of-type(1) {
  -webkit-backdrop-filter: blur(64px);
  backdrop-filter: blur(64px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,100%) 0%,rgba(0,0,0,1) 12.5%,rgba(0,0,0,1) 25%,rgba(0,0,0,0) 37.5%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,100%) 0%,rgba(0,0,0,1) 12.5%,rgba(0,0,0,1) 25%,rgba(0,0,0,0) 37.5%);
}
.blur > div:nth-of-type(2) {
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 12.5%,rgba(0,0,0,1) 25%,rgba(0,0,0,1) 37.5%,rgba(0,0,0,0) 50%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 12.5%,rgba(0,0,0,1) 25%,rgba(0,0,0,1) 37.5%,rgba(0,0,0,0) 50%);
}
.blur > div:nth-of-type(3) {
  -webkit-backdrop-filter: blur(16px);
  backdrop-filter: blur(16px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 25%,rgba(0,0,0,1) 37.5%,rgba(0,0,0,1) 50%,rgba(0,0,0,0) 62.5%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 25%,rgba(0,0,0,1) 37.5%,rgba(0,0,0,1) 50%,rgba(0,0,0,0) 62.5%);
}
.blur > div:nth-of-type(4) {
  -webkit-backdrop-filter: blur(8px);
  backdrop-filter: blur(8px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 37.5%,rgba(0,0,0,1) 50%,rgba(0,0,0,1) 62.5%,rgba(0,0,0,0) 75%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 37.5%,rgba(0,0,0,1) 50%,rgba(0,0,0,1) 62.5%,rgba(0,0,0,0) 75%);
}
.blur > div:nth-of-type(5) {
  -webkit-backdrop-filter: blur(4px);
  backdrop-filter: blur(4px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 50%,rgba(0,0,0,1) 62.5%,rgba(0,0,0,1) 75%,rgba(0,0,0,0) 87.5%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 50%,rgba(0,0,0,1) 62.5%,rgba(0,0,0,1) 75%,rgba(0,0,0,0) 87.5%);
}
.blur > div:nth-of-type(6) {
  -webkit-backdrop-filter: blur(2px);
  backdrop-filter: blur(2px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 62.5%,rgba(0,0,0,1) 75%,rgba(0,0,0,1) 87.5%,rgba(0,0,0,0) 100%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 62.5%,rgba(0,0,0,1) 75%,rgba(0,0,0,1) 87.5%,rgba(0,0,0,0) 100%);
}
.blur > div:nth-of-type(7) {
  -webkit-backdrop-filter: blur(1px);
  backdrop-filter: blur(1px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 75%,rgba(0,0,0,1) 87.5%,rgba(0,0,0,1) 100%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 75%,rgba(0,0,0,1) 87.5%,rgba(0,0,0,1) 100%);
}
.blur > div:nth-of-type(8) {
  -webkit-backdrop-filter: blur(.5px);
  backdrop-filter: blur(.5px);
  -webkit-mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 87.5%,rgba(0,0,0,1) 100%);
  mask-image: linear-gradient(to bottom,rgba(0,0,0,0) 87.5%,rgba(0,0,0,1) 100%);
}
.blur::after {
  content: "";
  position: absolute;
  top: 0;
  inset-inline-start: 0;
  width: var(--p-radius-3xl);
  height: calc(2 * var(--p-radius-3xl));
  border-start-start-radius: var(--p-radius-3xl);
  box-shadow: 0 calc(-1 * var(--p-radius-3xl)) 0 0 var(--p-color-canvas);
  transition: border-radius var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.main {
  z-index: 2;
  grid-area: main;
  padding: clamp(16px, 1.25vw + 12px, 24px);
}
.footer {
  z-index: 5;
  grid-area: footer;
  padding: clamp(16px, 1.25vw + 12px, 24px) clamp(16px, 1.25vw + 12px, 24px) var(--p-spacing-fluid-sm);
  position: sticky;
  bottom: 0;
}
.footer::before {
  content: "";
  z-index: -1;
  position: absolute;
  inset: -140px 0 0;
  pointer-events: none;
  background: linear-gradient(to bottom,hsl(from var(--p-color-surface) h s l / 0) 0%,hsl(from var(--p-color-surface) h s l / 0.013) 8.1%,hsl(from var(--p-color-surface) h s l / 0.049) 15.5%,hsl(from var(--p-color-surface) h s l / 0.104) 22.5%,hsl(from var(--p-color-surface) h s l / 0.175) 29%,hsl(from var(--p-color-surface) h s l / 0.259) 35.3%,hsl(from var(--p-color-surface) h s l / 0.352) 41.2%,hsl(from var(--p-color-surface) h s l / 0.45) 47.1%,hsl(from var(--p-color-surface) h s l / 0.55) 52.9%,hsl(from var(--p-color-surface) h s l / 0.648) 58.8%,hsl(from var(--p-color-surface) h s l / 0.741) 64.7%,hsl(from var(--p-color-surface) h s l / 0.825) 71%,hsl(from var(--p-color-surface) h s l / 0.896) 77.5%,hsl(from var(--p-color-surface) h s l / 0.951) 84.5%,hsl(from var(--p-color-surface) h s l / 0.987) 91.9%,var(--p-color-surface) 100%);
  border-end-start-radius: var(--p-radius-3xl);
  transition: border-radius var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
}
.sidebar {
  z-index: 3;
  position: sticky;
  top: 0;
  height: 100dvh;
  padding: clamp(16px, 1.25vw + 12px, 24px);
  box-sizing: border-box;
  overflow: hidden auto;
  overscroll-behavior-y: contain;
}
.sidebar:focus-visible {
  outline: none;
}
.sidebar--start {
  grid-area: sidebar-start;
  justify-self: flex-end;
  background: var(--p-color-canvas);
  width: min(100vw,var(--p-canvas-sidebar-start-width,320px));
}
.sidebar--end {
  grid-area: sidebar-end;
  justify-self: flex-start;
  border-inline-start: 1px solid var(--p-color-contrast-lower);
  background: var(--p-color-surface);
  width: min(100vw,var(--p-canvas-sidebar-end-width,320px));
}
.sidebar__header {
  z-index: 9999999;
  display: flex;
  gap: var(--p-spacing-static-sm);
  align-items: center;
  position: sticky;
  top: calc(-1 * clamp(16px, 1.25vw + 12px, 24px));
  margin: calc(-1 * clamp(16px, 1.25vw + 12px, 24px)) calc(-1 * clamp(16px, 1.25vw + 12px, 24px)) clamp(16px, 1.25vw + 12px, 24px);
  padding: var(--p-spacing-static-sm) clamp(16px, 1.25vw + 12px, 24px);
  min-height: 56px;
  box-sizing: border-box;
}
.sidebar__header--start {
  justify-content: flex-start;
}
.sidebar__header--start::before {
  background: linear-gradient(180deg,var(--p-color-canvas) 0%,var(--p-color-canvas) 65%,transparent 100%);
}
.sidebar__header--end {
  justify-content: space-between;
}
.sidebar__header--end::before {
  background: linear-gradient(180deg,var(--p-color-surface) 0%,var(--p-color-surface) 65%,transparent 100%);
}
.sidebar__header::before {
  content: "";
  z-index: -1;
  position: absolute;
  inset: 0 0 -8px;
  pointer-events: none;
}
@media(min-width:1000px) {
  .root {
    transition: grid-template-columns var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
    grid-template-columns: min(calc(100vw - 320px),var(--p-canvas-sidebar-start-width,320px)) minmax(320px,1fr) min(calc(100vw - 320px),var(--p-canvas-sidebar-end-width,320px));
  }
  .sidebar--start {
    width: min(calc(100vw - 320px),var(--p-canvas-sidebar-start-width,320px));
  }
  .sidebar--end {
    width: min(calc(100vw - 320px),var(--p-canvas-sidebar-end-width,320px));
  }
}

@media(max-width:999px) {
  .root {
    transition: transform var(--p-transition-duration,var(--p-duration-sm)) var(--p-ease-in-out);
    transform: translate3d(calc(-1 * min(100vw,var(--p-canvas-sidebar-start-width,320px)) - min(100vw,var(--p-canvas-sidebar-end-width,320px))),0,0);
  }
  .root:dir(rtl) {
    transform: translate3d(calc(min(100vw,var(--p-canvas-sidebar-start-width,320px)) + min(100vw,var(--p-canvas-sidebar-end-width,320px))),0,0);
  }
}

@container(min-width:760px) {
  .header__crest {
    display: none;
  }
}

@container(max-width:759px) {
  .header__wordmark {
    display: none;
  }
}"
`;
